Ready or Not Section
Maquetar title, discount y price

--- a/index.html
+++ b/index.html
@@ -307,9 +307,7 @@
                 <article class="listing__article">
                   <a href="https://www.instant-gaming.com/es/14704-comprar-football-manager-2024-pc-mac-juego-steam-europe/" class="listing__link">
                     <img src="/assets/img/football-manager-2024-pc-mac-juego-steam-europe-cover.jpg" alt="Football Manager 2024" class="listing__img" />
-                    <video class="listing__video" preload="none" loop muted playsinline>
-                      <source src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm" />
-                    </video>
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/football-manager-2024-pc-mac-juego-steam-europe-preview.webm" type="video/webm"></video>
                     <div class="listing__discount">-45%</div>
                   </a>
                   <div class="listing__info">
@@ -426,7 +424,7 @@
           </div>
         </div>
       </section>
-      <section class="trust__section">
+      <div class="trust__div">
         <div class="trust__wrapper narrow__wrapper">
           <ul class="trust__contain">
             <li class="trust__li">
@@ -471,11 +469,11 @@
             </li>
           </ul>
         </div>
-      </section>
-      <div class="reservations__container">
+      </div>
+      <section class="reservations__section">
         <div class="reservations__wrapper narrow__wrapper">
           <div class="reservations__column">
-            <a href="https://www.instant-gaming.com/es/busquedas/" class="reservations__link">
+            <a href="https://www.instant-gaming.com/es/reservas/" class="reservations__link">
               <h2 class="reservations__h2">Reservas</h2>
               <svg xmlns="http://www.w3.org/2000/svg" class="reservations__svg" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
@@ -487,9 +485,7 @@
                 <article class="listing__article">
                   <a href="https://www.instant-gaming.com/es/15236-comprar-los-sims-4-se-alquila-pc-mac-juego-ea-app/" class="listing__link">
                     <img src="/assets/img/los-sims-4-se-alquila-pc-mac-juego-ea-app-cover.jpg" alt="Los Sims 4 Se Alquila" class="listing__img" />
-                    <video class="listing__video" preload="none" loop muted playsinline>
-                      <source src="/assets/video/los-sims-4-se-alquila-pc-mac-juego-ea-app-preview.webm" type="video/webm" />
-                    </video>
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/los-sims-4-se-alquila-pc-mac-juego-ea-app-preview.webm" type="video/webm"></video>
                     <div class="listing__discount">-28%</div>
                   </a>
                   <div class="listing__info">
@@ -590,7 +586,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </section>
       <section class="partner__section">
         <div class="partner__wrapper narrow__wrapper">
           <div class="partner__container">
@@ -674,6 +670,151 @@
             </li>
           </ul>
         </div>
+      </div>
+      <section class="bestseller__section">
+        <div class="bestseller__wrapper narrow__wrapper">
+          <div class="bestseller__column">
+            <a href="https://www.instant-gaming.com/es/mas-vendidos/" class="bestseller__link">
+              <h2 class="bestseller__h2">Más vendidos</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" class="bestseller__svg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+              </svg>
+            </a>
+
+            <ul class="bestseller__container listing">
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="listing__link">
+                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-55%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Xbox Game Pass Core 3 Meses</h3>
+                    <span class="listing__price">8.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/621-comprar-tarjeta-playstation-network-50eur-50-euros-card-playstation-3-playstation-4-playstation-5-juego-playstation-store-espana/" class="listing__link">
+                    <img src="/assets/img/assetto-corsa-ultimate-edition-ultimate-edition-pc-juego-steam-cover.jpg" alt="Assetto Corsa Ultimate Edition" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/assetto-corsa-ultimate-edition-ultimate-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-6%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Assetto Corsa Ultimate Edition</h3>
+                    <span class="listing__price">46.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14000-comprar-against-the-storm-pc-juego-steam/" class="listing__link">
+                    <img src="/assets/img/against-the-storm-pc-juego-steam-cover.jpg" alt="Against the Storm" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/against-the-storm-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-59%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Against the Storm</h3>
+                    <span class="listing__price">12.33€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/7072-comprar-hogwarts-legacy-pc-juego-steam-europe/" class="listing__link">
+                    <img src="/assets/img/hogwarts-legacy-pc-juego-steam-europe-cover.jpg" alt="Hogwarts Legacy" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/hogwarts-legacy-pc-juego-steam-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-57%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Hogwarts Legacy</h3>
+                    <span class="listing__price">25.52€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/14196-comprar-total-war-pharaoh-pc-mac-juego-steam/" class="listing__link">
+                    <img src="/assets/img/marvel-s-spider-man-miles-morales-pc-juego-steam-cover.jpg" alt="Marvel’s Spider-Man: Miles Morales" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/marvel-s-spider-man-miles-morales-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-62%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Marvel’s Spider-Man: Miles Morales</h3>
+                    <span class="listing__price">19.19€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/12567-comprar-minecraft-java-bedrock-edition-pc-juego-europe/" class="listing__link">
+                    <img src="/assets/img/minecraft-java-bedrock-edition-pc-juego-europe-cover.jpg" alt="Minecraft: Java & Bedrock Edition" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/minecraft-java-bedrock-edition-pc-juego-europe-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-40%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Minecraft: Java & Bedrock Edition</h3>
+                    <span class="listing__price">17.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/11907-comprar-marvel-s-spider-man-remastered-pc-juego-steam/" class="listing__link">
+                    <img src="/assets/img/marvel-s-spider-man-remastered-pc-juego-steam-cover.jpg" alt="Marvel’s Spider-Man: Remastered" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/marvel-s-spider-man-remastered-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-62%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Marvel’s Spider-Man: Remastered</h3>
+                    <span class="listing__price">22.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/7325-comprar-god-of-war-pc-juego-steam/" class="listing__link">
+                    <img src="/assets/img/god-of-war-pc-juego-steam-cover.jpg" alt="God Of War" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/god-of-war-pc-juego-steam-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-62%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">God Of War</h3>
+                    <span class="listing__price">18.99€</span>
+                  </div>
+                </article>
+              </li>
+              <li class="listing__li">
+                <article class="listing__article">
+                  <a href="https://www.instant-gaming.com/es/5679-comprar-rockstar-red-dead-redemption-2-pc-juego-rockstar/" class="listing__link">
+                    <img src="/assets/img/red-dead-redemption-2-pc-juego-rockstar-cover.jpg" alt="Red Dead Redemption 2" class="listing__img" />
+                    <video class="listing__video" preload="none" loop muted playsinline src="/assets/video/red-dead-redemption-2-pc-juego-rockstar-preview.webm" type="video/webm"></video>
+                    <div class="listing__discount">-76%</div>
+                  </a>
+                  <div class="listing__info">
+                    <h3 class="listing__name">Red Dead Redemption 2</h3>
+                    <span class="listing__price">14.69€</span>
+                  </div>
+                </article>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <div class="background__div">
+        <a href="https://www.instant-gaming.com/es/2075-comprar-ready-or-not-pc-juego-steam/" class="background__a">
+          <picture class="parallax__picture">
+            <source srcset="/assets/img/2075-400.jpg" media="(max-width: 400px)" />
+            <source srcset="/assets/img/2075-500.jpg" media="(max-width: 500px)" />
+            <source srcset="/assets/img/2075-700.jpg" media="(max-width: 700px)" />
+            <source srcset="/assets/img/2075-1000.jpg" media="(max-width: 1000px)" />
+            <source srcset="/assets/img/2075-1400.jpg" media="(max-width: 1400px)" />
+            <source srcset="/assets/img/2075-1920.jpg" media="(max-width: 1920px)" />
+            <img src="/assets/img/2075.jpg" alt="Ready or Not" />
+          </picture>
+        </a>
       </div>
     </main>
   </body>
