--- a/index.html
+++ b/index.html
@@ -804,6 +804,14 @@
         </div>
       </section>
       <div class="background__div">
+        <div class="background__container offer">
+          <span class="offer__title">Ready or Not</span>
+          <div class="offer__container">
+            <span class="offer__discount">-26%</span>
+            <span class="offer__price">36.99€</span>
+          </div>
+        </div>
+
         <a href="https://www.instant-gaming.com/es/2075-comprar-ready-or-not-pc-juego-steam/" class="background__a">
           <picture class="parallax__picture">
             <source srcset="/assets/img/2075-400.jpg" media="(max-width: 400px)" />
