--- a/index.html
+++ b/index.html
@@ -824,6 +824,73 @@
           </picture>
         </a>
       </div>
+      <section class="reviews__section">
+        <div class="reviews__wrapper narrow__wrapper">
+          <div class="reviews__column">
+            <a href="https://www.instant-gaming.com/es/mas-vendidos/" class="reviews__link">
+              <h2 class="reviews__h2">Últimas reviews</h2>
+              <svg xmlns="http://www.w3.org/2000/svg" class="reviews__svg" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+              </svg>
+            </a>
+
+            <ul class="reviews__container cards">
+              <li class="cards__li">
+                <article class="cards__article">
+                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
+                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  </a>
+                  <div class="cards__info">
+                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                  </div>
+                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                </article>
+              </li>
+              <li class="cards__li">
+                <article class="cards__article">
+                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
+                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  </a>
+                  <div class="cards__info">
+                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                  </div>
+                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                </article>
+              </li>
+              <li class="cards__li">
+                <article class="cards__article">
+                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
+                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  </a>
+                  <div class="cards__info">
+                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                  </div>
+                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                </article>
+              </li>
+              <li class="cards__li">
+                <article class="cards__article">
+                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
+                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  </a>
+                  <div class="cards__info">
+                    <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                  </div>
+                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                </article>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
