--- a/index.html
+++ b/index.html
@@ -837,54 +837,62 @@
             <ul class="reviews__container cards">
               <li class="cards__li">
                 <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
-                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  <a href="https://www.instant-gaming.com/es/209-comprar-the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam/" class="cards__link">
+                    <img src="/assets/img/the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam-cover.jpg" alt="The Elder Scrolls V: Skyrim Legendary Edition" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/the-elder-scrolls-v-skyrim-legendary-edition-legendary-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
                   </a>
                   <div class="cards__info">
                     <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
                   </div>
-                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                  <div class="cards__text">
+                    <p class="cards__p">Diversión infinita. Tiene bugs y eso, es un juego viejo, pero hay tantas cosas para hacer que nunca me aburriré de re jugarlo. Puedes elegir tu estilo de juego, pasar horas sin hacer una misión principal de la historia, solo jugando secundarias, o simplemente cazando, crafteando, mineando. Lo que quieras.</p>
+                  </div>
                 </article>
               </li>
               <li class="cards__li">
                 <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
-                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  <a href="https://www.instant-gaming.com/es/3666-comprar-resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam/" class="cards__link">
+                    <img src="/assets/img/resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam-cover.jpg" alt="Resident Evil 2 Biohazard RE:2 Deluxe Edition" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/resident-evil-2-biohazard-re-2-deluxe-edition-deluxe-edition-pc-juego-steam-preview.webm" type="video/webm"></video>
                   </a>
                   <div class="cards__info">
                     <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
                   </div>
-                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                  <div class="cards__text">
+                    <p class="cards__p">Tenía las expectativas altas después de leer tantas opiniones positivas y no me ha defraudado en absoluto. He de añadir que muchas de estas valoraciones comparan el remake con el juego original de 1998; en mi caso no tuve la suerte de probarlo en su momento, así que para mí es una experiencia completamente nueva. Y quería compartir que, desde el punto de vista de alguien que no tiene ni la más remota idea de qué te aguarda detrás de cada puerta, verja o esquina, también resulta totalmente gratificante. Es una sensación de peligro, de tensión constante, de inmersión que no había aportado ninguno de los survival que había probado hasta ahora, y si bien la variedad de extras no es enorme, sí aportan una buena dosis de refresco y rejugabilidad. Por no hablar ya de ese detalle que pocos juegos actuales conocen ya, y que es el no darte todo el camino mascadito para que te puedas devanar los sesos con cada puzle o misterio a resolver. Hay que valorar al juego por lo que es y por lo que aporta, y aquí me quito el sombrero; obviamente no tengo ni la más remota idea de cómo de fiel es al original pero, como juego en sí, Capcom ha hecho un trabajo de renombre.</p>
+                  </div>
                 </article>
               </li>
               <li class="cards__li">
                 <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
-                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  <a href="https://www.instant-gaming.com/es/8310-comprar-mortal-kombat-11-ultimate-ultimate-pc-juego-steam/" class="cards__link">
+                    <img src="/assets/img/mortal-kombat-11-ultimate-ultimate-pc-juego-steam-cover.jpg" alt="Mortal Kombat 11 Ultimate" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/mortal-kombat-11-ultimate-ultimate-pc-juego-steam-preview.webm" type="video/webm"></video>
                   </a>
                   <div class="cards__info">
                     <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
                     <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
                   </div>
-                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                  <div class="cards__text">
+                    <p class="cards__p">Una p***a basura, no lo recomiendo, tiene buenos gráficos, pero los controles son basura, el personaje se mueve menos que una piedra, tienes que hacer polladas de esas de combinaciones de 20 botones para dar un puñetazo de m***a.</p>
+                  </div>
                 </article>
               </li>
               <li class="cards__li">
                 <article class="cards__article">
-                  <a href="https://www.instant-gaming.com/es/2-comprar-xbox-game-pass-core-3-meses-3-months-xbox-one-xbox-series-x-s-juego-microsoft-store-europe/" class="cards__link">
-                    <img src="/assets/img/xbox-game-pass-core-3-meses-3-months-xbox-xbox-one-xbox-series-x-s-juego-microsoft-store-cover.jpg" alt="Xbox Game Pass Core 3 Meses" class="cards__img" />
-                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/xbox-game-pass-ultimate-1-mes-no-acumulable-1-month-ultimate-pc-xbox-one-xbox-series-x-s-juego-microsoft-store-europe-preview.webm" type="video/webm"></video>
+                  <a href="https://www.instant-gaming.com/es/1843-comprar-ubisoft-connect-assassin-s-creed-origins-pc-juego-ubisoft-connect-europe/" class="cards__link">
+                    <img src="/assets/img/assassin-s-creed-origins-pc-juego-ubisoft-connect-europe-cover.jpg" alt="Assassin's Creed: Origins" class="cards__img" />
+                    <video class="cards__video" preload="none" loop muted playsinline src="/assets/video/assassin-s-creed-origins-pc-juego-ubisoft-connect-europe-preview.webm" type="video/webm"></video>
                   </a>
                   <div class="cards__info">
                     <img src="/assets/img/avatar2.svg" alt="" class="cards__icons" />
-                    <img src="/assets/img/icon-dislike.png" alt="" class="cards__icons" />
+                    <img src="/assets/img/icon-like.png" alt="" class="cards__icons" />
                   </div>
-                  <p class="cards__p">Esto es una estafa te venden el dlc incorrecto y encima no te hacen decolución encima te cobran un 21% de IVA que no te ponen en la tienda , no vuelvo a comprar en esta plataforma, los peores 30 euros invertidos de mi vida ES UNA ESTAFA NO COMPREIS JAMÁS AQUÍ.</p>
+                  <div class="cards__text">
+                    <p class="cards__p">Gran juego, basada en egipto, con mundo abierto, muchas horas de juegos, con infinitas misiones secundarias, buenos graficos, y buena jugabilidad. La historia principal podria mejorar un poco pero es aceptable.</p>
+                  </div>
                 </article>
               </li>
             </ul>
